--- a/www/index.html
+++ b/www/index.html
@@ -1,17 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="format-detection" content="telephone=no">
-        <meta name="msapplication-tap-highlight" content="no">
-        <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
-        <meta name="color-scheme" content="light dark">
-        <title>Hello World</title>
-        <link rel="stylesheet" href="css/index.css">
-    </head>
-    <body>
-        <h1>INDEX</h1>
-        <script src="js/index.js"></script>
-    </body>
+<head>
+    <meta charset="utf-8">
+    <meta name="format-detection" content="telephone=no">
+    <meta name="msapplication-tap-highlight" content="no">
+    <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
+    <meta name="color-scheme" content="light dark">
+    <title>Hello World</title>
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/normalize.css">
+</head>
+<body>
+    <div class="container">
+        <p class="title">Game platforms</p>
+        <div class="container_options">
+            <div class="left"></div>
+            <div class="right"></div>
+            <div class="button">
+                <input type="button" value="JUGAR">
+                <div class="point_one"></div>
+                <div class="point_two"></div>
+                <div class="point_three"></div>
+                <div class="point_four"></div>
+            </div>
+            <div class="button">
+            <input type="button" value="OPCIONES">
+            <div class="point_one"></div>
+            <div class="point_two"></div>
+            <div class="point_three"></div>
+            <div class="point_four"></div>
+        </div>
+            <div class="button">
+            <input type="button" value="CREDITOS">
+            <div class="point_one"></div>
+            <div class="point_two"></div>
+            <div class="point_three"></div>
+            <div class="point_four"></div>
+        </div>
+        </div>
+        <footer>
+            <p>MENU</p>
+            <div class="exit">
+                <img src="img/exit.png" alt="exit img">
+            </div>
+        </footer>
+        <div class="footer"></div>
+    </div>
+    <script src="js/index.js"></script>
+</body>
 </html>
