Creacion carpetas Victos Vargas

--- a/www/index.html
+++ b/www/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<html>
 <head>
     <meta charset="utf-8">
     <meta name="format-detection" content="telephone=no">
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
     <meta name="color-scheme" content="light dark">
-    <title>Hello World</title>
+    <title>Home</title>
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/normalize.css">
 </head>
@@ -25,19 +24,19 @@
                 <div class="point_four"></div>
             </div>
             <div class="button">
-            <input type="button" value="OPCIONES">
-            <div class="point_one"></div>
-            <div class="point_two"></div>
-            <div class="point_three"></div>
-            <div class="point_four"></div>
-        </div>
-            <div class="button">
-            <input type="button" value="CREDITOS">
-            <div class="point_one"></div>
-            <div class="point_two"></div>
-            <div class="point_three"></div>
-            <div class="point_four"></div>
-        </div>
+                <input type="button" value="OPCIONES">
+                <div class="point_one"></div>
+                <div class="point_two"></div>
+                <div class="point_three"></div>
+                <div class="point_four"></div>
+            </div>
+                <div class="button">
+                <input type="button" value="CREDITOS">
+                <div class="point_one"></div>
+                <div class="point_two"></div>
+                <div class="point_three"></div>
+                <div class="point_four"></div>
+            </div>
         </div>
         <footer>
             <p>MENU</p>
