Img y Assets proyecto

--- a/www/index.html
+++ b/www/index.html
@@ -41,7 +41,7 @@
         <footer>
             <p>MENU</p>
             <div class="exit">
-                <img src="img/exit.png" alt="exit img">
+                <img src="img/exit_background.png" alt="exit img">
             </div>
         </footer>
         <div class="footer"></div>
