--- a/www/index.html
+++ b/www/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="container">
-        <p class="title">Game platforms</p>
+        <a class="title" href="html/game_tp_ss/game_tp_ss.html">Game platforms</a>
         <div class="container_options">
             <div class="left"></div>
             <div class="right"></div>
