--- a/www/html/coordinador_jf_wr/create_or_join.html
+++ b/www/html/coordinador_jf_wr/create_or_join.html
@@ -17,23 +17,23 @@
         <header>
             <p class="title">Game platforms</p>
             <div class="square" onclick="goConfigurations()">
-                <img src="../../img/settings.png" alt="settings">
+                <img src="../../img/settings.png" alt="settings" onclick="vibrate()">
             </div>
         </header>
         <div class="container_options">
             <div class="left"></div>
             <div class="right"></div>
-            <div class="button">
+            <div class="button" onclick="vibrate()">
                 <input type="button" value="CREAR" onclick="goCreate()">
             </div>
-            <div class="button">
+            <div class="button" onclick="vibrate()">
                 <input type="button" value="UNIRSE" onclick="goJoin()">
             </div>
         </div>
         <footer>
             <p>MENU</p>
             <div class="exit" onclick="goHome()">
-                <img src="../../img/exit_background.png" alt="exit img">
+                <img src="../../img/exit_background.png" alt="exit img" onclick="vibrate()">
             </div>
         </footer>
         <div class="footer"></div>
