--- a/www/html/coordinador_jf_wr/games.html
+++ b/www/html/coordinador_jf_wr/games.html
@@ -20,28 +20,28 @@
             <div class="left"></div>
             <div class="right"></div>
             <div class="games">
-                <div class="button">
+                <div class="button" onclick="vibrate()">
                     <input type="button" value="JUEGO 1">
                 </div>
-                <div class="button">
+                <div class="button" onclick="vibrate()">
                     <input type="button" value="JUEGO 2">
                 </div>
-                <div class="button">
+                <div class="button" onclick="vibrate()">
                     <input type="button" value="JUEGO 3">
                 </div>
-                <div class="button">
+                <div class="button" onclick="vibrate()">
                     <input type="button" value="JUEGO 4">
                 </div>
-                <div class="button">
+                <div class="button" onclick="vibrate()">
                     <input type="button" value="JUEGO 5">
                 </div>
-                <div class="button">
+                <div class="button" onclick="vibrate()">
                     <input type="button" value="JUEGO 6">
                 </div>
             </div>
             <div class="code">
                 <input type="text" value="C0D1G0" readonly>
-                <div class="img">
+                <div class="img" onclick="vibrate()">
                     <img src="../../img/share.png" alt="share">
                 </div>
             </div>
@@ -49,7 +49,7 @@
         <footer>
             <p>LOBBIE</p>
             <div class="exit" onclick="goHome()">
-                <img src="../../img/exit_background.png" alt="exit img">
+                <img src="../../img/exit_background.png" alt="exit img" onclick="vibrate()">
             </div>
         </footer>
         <div class="footer"></div>
