--- a/www/html/coordinador_jf_wr/join.html
+++ b/www/html/coordinador_jf_wr/join.html
@@ -18,7 +18,7 @@
         <header>
             <p class="title">Game platforms</p>
             <div class="square" onclick="goConfigurations()">
-                <img src="../../img/settings.png" alt="settings">
+                <img src="../../img/settings.png" alt="settings" onclick="vibrate()">
             </div>
         </header>
         <div class="container_options">
@@ -28,14 +28,14 @@
             <div class="button">
                 <input type="text" placeholder="CODIGO">
             </div>
-            <div class="button">
+            <div class="button" onclick="vibrate()">
                 <input type="button" value="INGRESAR" onclick="goLobbie()">
             </div>
         </div>
         <footer>
             <p>MENU</p>
             <div class="exit" onclick="goHome()">
-                <img src="../../img/exit_background.png" alt="exit img">
+                <img src="../../img/exit_background.png" alt="exit img" onclick="vibrate()">
             </div>
         </footer>
         <div class="footer"></div>
