--- a/www/html/coordinador_jf_wr/credits.html
+++ b/www/html/coordinador_jf_wr/credits.html
@@ -17,7 +17,7 @@
         <header>
             <p class="title">Game platforms</p>
             <div class="square" onclick="goConfigurations()">
-                <img src="../../img/settings.png" alt="settings">
+                <img src="../../img/settings.png" alt="settings" onclick="vibrate()">
             </div>
         </header>
         <div class="container_options">
@@ -28,7 +28,7 @@
         <footer>
             <p>CREDITOS</p>
             <div class="exit" onclick="goHome()">
-                <img src="../../img/exit_background.png" alt="exit img">
+                <img src="../../img/exit_background.png" alt="exit img" onclick="vibrate()">
             </div>
         </footer>
         <div class="footer"></div>
