Funcionalidad de sesion
Falta actualizar lista de jugadores, arreglar boton configuracion y su redireccion

--- a/www/html/coordinador_jf_wr/create.html
+++ b/www/html/coordinador_jf_wr/create.html
@@ -36,7 +36,7 @@
             </div>
             <input type="button" value="JUEGOS" onclick="goGames();vibrate()">
             <div class="code">
-                <input type="text" value="C0D1G0" readonly>
+                <input type="text" value="C0D1G0" id="inputCode" readonly>
                 <div class="img" onclick="vibrate()">
                     <img src="../../img/share.png" alt="share">
                 </div>
@@ -44,7 +44,7 @@
         </div>
         <footer>
             <p>LOBBIE</p>
-            <div class="exit" onclick="goHome()">
+            <div class="exit" onclick="deleteData()">
                 <img src="../../img/exit_background.png" alt="exit img" onclick="vibrate()">
             </div>
         </footer>
