--- a/www/html/coordinador_jf_wr/create_or_join.html
+++ b/www/html/coordinador_jf_wr/create_or_join.html
@@ -23,8 +23,8 @@
         <div class="container_options">
             <div class="left"></div>
             <div class="right"></div>
-            <div class="button" onclick="vibrate()">
-                <input type="button" value="CREAR" onclick="goCreate()">
+            <div class="button" onclick="vibrate(); createSesion()">
+                <input type="button" value="CREAR">
             </div>
             <div class="button" onclick="vibrate()">
                 <input type="button" value="UNIRSE" onclick="goJoin()">
