--- a/www/html/coordinador_jf_wr/games.html
+++ b/www/html/coordinador_jf_wr/games.html
@@ -40,7 +40,7 @@
                 </div>
             </div>
             <div class="code">
-                <input type="text" value="C0D1G0" readonly>
+                <input type="text" value="C0D1G0" id="inputCode" readonly>
                 <div class="img" onclick="vibrate()">
                     <img src="../../img/share.png" alt="share">
                 </div>
@@ -48,13 +48,13 @@
         </div>
         <footer>
             <p>LOBBIE</p>
-            <div class="exit" onclick="goHome()">
+            <div class="exit" onclick="deleteData()">
                 <img src="../../img/exit_background.png" alt="exit img" onclick="vibrate()">
             </div>
         </footer>
         <div class="footer"></div>
     </div>
     <script src="../../js/coordinador_jf_wr/global.js"></script>
-    <script src="../../js/coordinador_jf_wr/configurations.js"></script>
+    <script src="../../js/coordinador_jf_wr/games.js"></script>
 </body>
 </html>
