--- a/www/html/coordinador_jf_wr/join.html
+++ b/www/html/coordinador_jf_wr/join.html
@@ -26,7 +26,7 @@
             <div class="right"></div>
             <p class="container_title">INGRESE EL CODIGO</p>
             <div class="button">
-                <input type="text" placeholder="CODIGO">
+                <input type="number" placeholder="CODIGO" id="inputCode">
             </div>
             <div class="button" onclick="vibrate()">
                 <input type="button" value="INGRESAR" onclick="goLobbie()">
