--- a/www/html/coordinador_jf_wr/lobbie.html
+++ b/www/html/coordinador_jf_wr/lobbie.html
@@ -26,7 +26,7 @@
             <div class="right"></div>
             <p class="container_title">INGRESE SU NOMBRE</p>
             <input type="text" placeholder="Nombre" id="username">
-            <input type="button" value="GUARDAR" id="save" onclick="saveName();vibrate()">
+            <input type="button" value="GUARDAR" id="save" onclick="saveName(); vibrate()">
             <div class="players">
                 <p class="container_subtitle">JUGADORES DENTRO:</p>
                 <p class="container_text">Jugador 1</p>
@@ -40,7 +40,7 @@
         </div>
         <footer>
             <p>LOBBIE</p>
-            <div class="exit" onclick="goHome()">
+            <div class="exit" onclick="deletePlayer()">
                 <img src="../../img/exit_background.png" alt="exit img" onclick="vibrate()">
             </div>
         </footer>
