--- a/www/html/coordinador_jf_wr/configurations.html
+++ b/www/html/coordinador_jf_wr/configurations.html
@@ -33,7 +33,7 @@
         </div>
         <footer>
             <p>OPCIONES</p>
-            <div class="exit" onclick="goHome()">
+            <div class="exit" onclick="goBack()">
                 <img src="../../img/exit_background.png" alt="exit img" onclick="vibrate()">
             </div>
         </footer>
