--- a/www/html/coordinador_jf_wr/create.html
+++ b/www/html/coordinador_jf_wr/create.html
@@ -24,16 +24,7 @@
             <div class="left"></div>
             <div class="right"></div>
             <p class="container_title">EN ESPERA</p>
-            <div class="players">
-                <p class="container_subtitle">JUGADORES DENTRO:</p>
-                <p class="container_text">Jugador 1</p>
-                <p class="container_text">Jugador 2</p>
-                <p class="container_text">Jugador 3</p>
-                <p class="container_text">Jugador 4</p>
-                <p class="container_text">Jugador 5</p>
-                <p class="container_text">Jugador 6</p>
-                <p class="container_text">Jugador 7</p>
-            </div>
+            <div class="players" onclick="refreshPlayers()"></div>
             <input type="button" value="JUEGOS" onclick="goGames();vibrate()">
             <div class="code">
                 <input type="text" value="C0D1G0" id="inputCode" readonly>
