Funcionalidad CASI Terminada

--- a/www/html/coordinador_jf_wr/games.html
+++ b/www/html/coordinador_jf_wr/games.html
@@ -36,7 +36,7 @@
                     <input type="button" value="JUEGO 5">
                 </div>
                 <div class="button" onclick="vibrate()">
-                    <input type="button" value="JUEGO 6">
+                    <input type="button" value="JUEGO 6" onclick="cambiarEscena()">
                 </div>
             </div>
             <div class="code">
