--- a/www/html/game_pb_mm/scienceSection.html
+++ b/www/html/game_pb_mm/scienceSection.html
@@ -22,12 +22,11 @@
             <div class="left"></div>
             <div class="right"></div>
                 <div class="button">
-                    <input type="button" value="SALIR">
+                    <input type="button" value="SALIR" onclick="goHome()">
                 </div><br>
         </div>    
 
     </div>
-    <script src="../../js/game_pb_mm/scienceSection.js"></script>
-    <script src="../../js/game_pb_mm/questionsSection.js"></script>
+    <script src="../../js/game_pb_mm/historySection.js"></script>
 </body>
 </html>
