--- a/www/html/game_pb_mm/technologySection.html
+++ b/www/html/game_pb_mm/technologySection.html
@@ -16,18 +16,17 @@
     <div class="container">
         <p class="title">SECCIÓN TECNOLOGÍA</p><br>
         <div class="imagen">
-            <img src="../../img/game_pb_mm/inicio.png" alt="exit img"><br>
+            <img src="../../img/game_pb_mm/Tecnologias.png" alt="exit img"><br>
         </div>
         <div class="container_options">
             <div class="left"></div>
             <div class="right"></div>
                 <div class="button">
-                    <input type="button" value="SALIR">
+                    <input type="button" value="SALIR" onclick="goHome()">
                 </div><br>
         </div>    
 
     </div>
-    <script src="../../js/coordinador_jf_wr/global.js"></script>
-    <script src="../../js/coordinador_jf_wr/configurations.js"></script>
+    <script src="../../js/game_pb_mm/historySection.js"></script>
 </body>
 </html>
