--- a/www/html/game_pb_mm/historySection.html
+++ b/www/html/game_pb_mm/historySection.html
@@ -16,7 +16,7 @@
     <div class="container">
         <p class="title">SECCIÓN HISTORIA</p><br>
         <div class="imagen">
-            <img src="../../img/game_pb_mm/inicio.png" alt="exit img"><br>
+            <img src="../../img/game_pb_mm/historia.png" alt="exit img"><br>
         </div>
         <div class="container_options">
             <div class="left"></div>
