--- a/www/html/coordinador_jf_wr/create.html
+++ b/www/html/coordinador_jf_wr/create.html
@@ -24,7 +24,7 @@
             <div class="left"></div>
             <div class="right"></div>
             <p class="container_title">EN ESPERA</p>
-            <div class="players" onclick="refreshPlayers()"></div>
+            <div class="players"></div>
             <input type="button" value="JUEGOS" onclick="goGames();vibrate()">
             <div class="code">
                 <input type="text" value="C0D1G0" id="inputCode" readonly>
