--- a/www/html/coordinador_jf_wr/lobbie.html
+++ b/www/html/coordinador_jf_wr/lobbie.html
@@ -31,7 +31,7 @@
             <div class="button">
                 <input type="button" value="GUARDAR" id="save" onclick="saveName(); vibrate()">
             </div>
-            <div class="players" onclick="refreshPlayers()"></div>
+            <div class="players"></div>
         </div>
         <footer>
             <p>LOBBIE</p>
