--- a/www/html/game_pb_mm/questionsSection.html
+++ b/www/html/game_pb_mm/questionsSection.html
@@ -49,6 +49,7 @@
             </div>
         </div>
     </div>
+    <audio src="../../img/game_pb_mm/sonido.mp3" autoplay="true" loop="true"></audio>
     <script src="../../js/game_pb_mm/questionsSection.js"></script>
 </body>
 </html>
