--- a/www/html/game_pb_mm/scienceSection.html
+++ b/www/html/game_pb_mm/scienceSection.html
@@ -17,6 +17,7 @@
         <p class="title">SECCIÓN CIENCIA</p><br>
         <div class="imagen">
             <img src="../../img/game_pb_mm/Science.png" alt="exit img"><br>
+            <img src="../../img/game_pb_mm/gif.gif" alt="exit img"><br>
         </div>
         <div class="container_options">
             <div class="left"></div>
@@ -27,6 +28,7 @@
         </div>    
 
     </div>
+
     <script src="../../js/game_pb_mm/historySection.js"></script>
 </body>
 </html>
