Juego PB_MM integrado

--- a/www/html/coordinador_jf_wr/games.html
+++ b/www/html/coordinador_jf_wr/games.html
@@ -19,26 +19,7 @@
         <div class="container_options">
             <div class="left"></div>
             <div class="right"></div>
-            <div class="games">
-                <div class="button" onclick="vibrate()">
-                    <input type="button" value="JUEGO 1">
-                </div>
-                <div class="button" onclick="vibrate()">
-                    <input type="button" value="JUEGO 2">
-                </div>
-                <div class="button" onclick="vibrate()">
-                    <input type="button" value="JUEGO 3">
-                </div>
-                <div class="button" onclick="vibrate()">
-                    <input type="button" value="JUEGO 4">
-                </div>
-                <div class="button" onclick="vibrate()">
-                    <input type="button" value="JUEGO 5">
-                </div>
-                <div class="button" onclick="vibrate()">
-                    <input type="button" value="JUEGO 6">
-                </div>
-            </div>
+            <div class="games"></div>
             <div class="code">
                 <input type="text" value="C0D1G0" id="inputCode" readonly>
                 <div class="img" onclick="vibrate()">
