--- a/www/html/game_tp_ss/game_tp_ss.html
+++ b/www/html/game_tp_ss/game_tp_ss.html
@@ -7,6 +7,7 @@
         <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
         <meta name="color-scheme" content="light dark">
         <link rel="stylesheet" href="../../css/game_tp_ss/game_tp_ss.css">
+        <link rel="stylesheet" href="../../css/normalize.css">
         <title>Hello World</title>
     </head>
     
@@ -16,6 +17,7 @@
     </header>
     <div class="score">
         <h1 id="score">PUNTAJE:0000</h1>
+        <span id="Accelerometer_gz">0</span><span> m/s<sup>2</sup></span>
     </div>
     <div class="image">
         <img name="cube" src="../../img/game_tp_ss/img1.png" alt="">
