--- a/www/html/game_tp_ss/level_one_tp_ss.html
+++ b/www/html/game_tp_ss/level_one_tp_ss.html
@@ -15,9 +15,11 @@
     <header class="header">
         <h1>UNLOCKFIT</h1>
     </header>
+    <div class="total_content" id="img">
+        <img class="img1" src="../../img/Phone.png">
+    </div>
     <div class="score">
         <h1 id="score">PUNTAJE:0000</h1>
-        <span id="Accelerometer_gz">0</span><span> m/s<sup>2</sup></span>
     </div>
     <div class="image">
         <img name="cube" src="../../img/game_tp_ss/img1.png" alt="">
