--- a/www/html/game_tp_ss/level_one_tp_ss.html
+++ b/www/html/game_tp_ss/level_one_tp_ss.html
@@ -16,7 +16,7 @@
         <h1>UNLOCKFIT</h1>
     </header>
     <div class="total_content" id="img">
-        <img class="img1" src="../../img/Phone.png">
+        <img class="img1" src="../../img/game_tp_ss/Phone.png">
     </div>
     <div class="score">
         <h1 id="score">PUNTAJE:0000</h1>
