--- a/www/html/game_tp_ss/level_three_tp_ss.html
+++ b/www/html/game_tp_ss/level_three_tp_ss.html
@@ -16,7 +16,11 @@
         <h1>UNLOCKFIT</h1>
     </header>
     <div class="total_content" id="img">
-        <img class="img3" src="../../img/Phone.png">
+        <div class="information_level">
+            <h1>NIVEL 1</h1>
+            <h5>Mueva su télefono de adelante hacia atras</h5>
+        </div>
+        <img class="img1" src="../../img/game_tp_ss/Phone.png">
     </div>
     <div class="score">
         <h1 id="score">PUNTAJE:0000</h1>
