--- a/www/html/game_tp_ss/level_one_tp_ss.html
+++ b/www/html/game_tp_ss/level_one_tp_ss.html
@@ -15,7 +15,12 @@
     <header class="header">
         <h1>UNLOCKFIT</h1>
     </header>
+    
     <div class="total_content" id="img">
+        <div class="information_level">
+            <h1>NIVEL 1</h1>
+            <h5>Mueva su télefono de adelante hacia atras</h5>
+        </div>
         <img class="img1" src="../../img/game_tp_ss/Phone.png">
     </div>
     <div class="score">
