--- a/www/html/game_vv/game_vv.html
+++ b/www/html/game_vv/game_vv.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Help me Jump</title>
     <link rel="stylesheet" href="../../css/game_vv/game_vv.css">
+    <link rel="stylesheet" href="../../css/normalize.css">
 </head>
 <body>
     <div id="board">
