--- a/www/html/game_tp_ss/level_two_tp_ss.html
+++ b/www/html/game_tp_ss/level_two_tp_ss.html
@@ -17,8 +17,8 @@
     </header>
     <div class="total_content" id="img">
         <div class="information_level">
-            <h1>NIVEL 1</h1>
-            <h5>Mueva su télefono de adelante hacia atras</h5>
+            <h1>NIVEL 2</h1>
+            <h5>Mueva su télefono de arriba hacia abajo</h5>
         </div>
         <img class="img2" src="../../img/game_tp_ss/Phone.png">
     </div>
