--- a/www/html/game_tp_ss/level_one_tp_ss.html
+++ b/www/html/game_tp_ss/level_one_tp_ss.html
@@ -8,7 +8,6 @@
         <meta name="color-scheme" content="light dark">
         <link rel="stylesheet" href="../../css/game_tp_ss/game_tp_ss.css">
         <link rel="stylesheet" href="../../css/normalize.css">
-        <title>Hello World</title>
     </head>
     
 <body>
@@ -27,7 +26,7 @@
         <h1 id="score">PUNTAJE:0000</h1>
     </div>
     <div class="image">
-        <img name="cube" src="../../img/game_tp_ss/img1.png" alt="">
+        <img name="cube" src="../../img/game_tp_ss/gifOne.gif" alt="">
     </div>
     
         <audio src="../../img/game_tp_ss/soundOne.mp3" autoplay="true" loop="true"></audio>
