--- a/www/html/game_tp_ss/level_three_tp_ss.html
+++ b/www/html/game_tp_ss/level_three_tp_ss.html
@@ -8,14 +8,13 @@
         <meta name="color-scheme" content="light dark">
         <link rel="stylesheet" href="../../css/game_tp_ss/game_tp_ss.css">
         <link rel="stylesheet" href="../../css/normalize.css">
-        <title>Hello World</title>
     </head>
     
 <body>
     <header class="header">
         <h1>UNLOCKFIT</h1>
     </header>
-    <div class="information_level">
+    <div class="information_level" id="information_level">
         <h1>NIVEL 3</h1>
         <h5>Mueva su télefono de adelante hacia atras</h5>
     </div>
@@ -26,9 +25,9 @@
         <h1 id="score">PUNTAJE:0000</h1>
     </div>
     <div class="image">
-        <img name="cube" src="../../img/game_tp_ss/img1.png" alt="">
+        <img name="cube" src="../../img/game_tp_ss/gifTwo.gif" alt="">
     </div>
     <audio src="../../img/game_tp_ss/soundThree.mp3" autoplay="true" loop="true"></audio>
-    <script src="../../js/game_tp_ss/game_tp_ss.js"></script>
+    <script src="../../js/game_tp_ss/level_three_tp_ss.js"></script>
     </body>
 </html>
