--- a/www/html/game_tp_ss/level_two_tp_ss.html
+++ b/www/html/game_tp_ss/level_two_tp_ss.html
@@ -8,27 +8,26 @@
         <meta name="color-scheme" content="light dark">
         <link rel="stylesheet" href="../../css/game_tp_ss/game_tp_ss.css">
         <link rel="stylesheet" href="../../css/normalize.css">
-        <title>Hello World</title>
     </head>
     
 <body>
     <header class="header">
         <h1>UNLOCKFIT</h1>
     </header>
+    <div class="information_level" id="information_level">
+        <h1>NIVEL 2</h1>
+        <h5>Mueva su télefono de arriba hacia abajo</h5>
+    </div>
     <div class="total_content" id="img">
-        <div class="information_level">
-            <h1>NIVEL 2</h1>
-            <h5>Mueva su télefono de arriba hacia abajo</h5>
-        </div>
         <img class="img2" src="../../img/game_tp_ss/Phone.png">
     </div>
     <div class="score">
         <h1 id="score">PUNTAJE:0000</h1>
     </div>
     <div class="image">
-        <img name="cube" src="../../img/game_tp_ss/img1.png" alt="">
+        <img name="cube" src="../../img/game_tp_ss/gifTwo.gif" alt="">
     </div>
     <audio src="../../img/game_tp_ss/soundTwo.mp3" autoplay="true" loop="true"></audio>
-    <script src="../../js/game_tp_ss/game_tp_ss.js"></script>
+    <script src="../../js/game_tp_ss/level_two_tp_ss.js"></script>
     </body>
 </html>
