--- a/www/html/game_tp_ss/level_two_tp_ss.html
+++ b/www/html/game_tp_ss/level_two_tp_ss.html
@@ -27,7 +27,10 @@
     <div class="image">
         <img name="cube" src="../../img/game_tp_ss/gifTwo.gif" alt="">
     </div>
-    <audio src="../../img/game_tp_ss/soundTwo.mp3" autoplay="true" loop="true"></audio>
+    <div class="sound" onclick="checkSound()">
+        <img id="imgSound" src="../../img/game_tp_ss/audio.png" alt="settings">
+    </div>
+    <audio id="audio" src="../../img/game_tp_ss/soundTwo.mp3" autoplay="true" loop="true"></audio>
     <script src="../../js/game_tp_ss/level_two_tp_ss.js"></script>
     </body>
 </html>
