--- a/www/html/game_tp_ss/finish_tp_ss.html
+++ b/www/html/game_tp_ss/finish_tp_ss.html
@@ -7,32 +7,31 @@
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
     <meta name="color-scheme" content="light dark">
-    <link rel="stylesheet" href="../../css/game_tp_ss/game_tp_ss.css">
     <link rel="stylesheet" href="../../css/normalize.css">
+    <link rel="stylesheet" href="../../css/game_tp_ss/game_tp_ss.css">
 </head>
 
 <body>
     <header class="header">
         <h1>UNLOCKFIT</h1>
     </header>
-    <div class="information_level" id="information_level">
-        <h1>NIVEL 3</h1>
-        <h5>Mueva su télefono de adelante hacia atras</h5>
-    </div>
-    <div class="total_content" id="img">
-        <img class="img3" src="../../img/game_tp_ss/Phone.png">
-    </div>
     <div class="score">
-        <h1 id="score">PUNTAJE:0000</h1>
+        <h1 id="score">¡¡JUEGO FINALIZADO!!</h1>
     </div>
-    <div class="image">
-        <img name="cube" src="../../img/game_tp_ss/gifTwo.gif" alt="">
+    <div class="score_finish">
+        <div class="score_container">
+            <h2 id="score1">p1</h2>
+            <h2 id="score2">p2</h2>
+            <h2 id="score3">p3</h2>
+            <h2>-----------------------</h2>
+            <h2 id="scoreTotal">------</h2>
+        </div>
     </div>
     <div class="sound" onclick="checkSound()">
         <img id="imgSound" src="../../img/game_tp_ss/audio.png" alt="settings">
     </div>
     <audio id="audio" src="../../img/game_tp_ss/soundThree.mp3" autoplay="true" loop="true"></audio>
-    <script src="../../js/game_tp_ss/level_three_tp_ss.js"></script>
+    <script src="../../js/game_tp_ss/finish_tp_ss.js"></script>
 </body>
 
 </html>
