--- a/www/html/game_tp_ss/finish_tp_ss.html
+++ b/www/html/game_tp_ss/finish_tp_ss.html
@@ -16,10 +16,12 @@
         <h1>UNLOCKFIT</h1>
     </header>
     <div class="score">
-        <h1 id="score">¡¡JUEGO FINALIZADO!!</h1>
+        <h1>¡¡JUEGO FINALIZADO!!</h1>
+        <h1 id="score">-----------</h1>
     </div>
     <div class="score_finish">
         <div class="score_container">
+            <h2 id="score_add">-----------------------</h2>
             <h2 id="score1">p1</h2>
             <h2 id="score2">p2</h2>
             <h2 id="score3">p3</h2>
