--- a/www/html/game_ef_lm/DifficultLevel.html
+++ b/www/html/game_ef_lm/DifficultLevel.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
     <meta name="color-scheme" content="light dark">
     <title>Nivel Dificil</title>
-    <link rel="stylesheet" href="../css/DifficultLevel.css">
+    <link rel="stylesheet" href="../../css/game_ef_lm/DifficultLevel.css">
     <link rel="stylesheet" href="css/normalize.css">
 </head>
 <body>
@@ -40,13 +40,13 @@
             
             
             <picture>
-              <img src="../img/ahorcado_6.png" alt="" id="image6">
-              <img src="../img/ahorcado_5.png" alt="" id="image5">
-              <img src="../img/ahorcado_4.png" alt="" id="image4">
-              <img src="../img/ahorcado_3.png" alt="" id="image3">
-              <img src="../img/ahorcado_2.png" alt="" id="image2">
-              <img src="../img/ahorcado_1.png" alt="" id="image1">
-              <img src="../img/ahorcado_0.png" alt="" id="image0">
+              <img src="../../img/game_ef_lm/ahorcado_6.png" alt="" id="image6">
+              <img src="../../img/game_ef_lm/ahorcado_5.png" alt="" id="image5">
+              <img src="../../img/game_ef_lm/ahorcado_4.png" alt="" id="image4">
+              <img src="../../img/game_ef_lm/ahorcado_3.png" alt="" id="image3">
+              <img src="../../img/game_ef_lm/ahorcado_2.png" alt="" id="image2">
+              <img src="../../img/game_ef_lm/ahorcado_1.png" alt="" id="image1">
+              <img src="../../img/game_ef_lm/ahorcado_0.png" alt="" id="image0">
             </picture>
 
 
@@ -87,6 +87,6 @@
    <!--FIN DIV Contenedor de Botónes-->
 
    
-   <script src="../js/DifficultLevel.js"></script>
+   <script src="../../js/game_ef_lm/DifficultLevel.js"></script>
 </body>
 </html>
