--- a/www/html/game_ef_lm/ScoreBoard.html
+++ b/www/html/game_ef_lm/ScoreBoard.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
     <meta name="color-scheme" content="light dark">
     <title>ScoreBoard</title>
-    <link rel="stylesheet" href="../css/ScoreBoard.css">
+    <link rel="stylesheet" href="../../css/game_ef_lm/ScoreBoard.css">
     <link rel="stylesheet" href="css/normalize.css">
 </head>
 <body>
@@ -22,6 +22,6 @@
     </div>
 
 
-    <script src="../js/ScoreBoard.js"></script>
+    <script src="../../js/game_ef_lm/ScoreBoard.js"></script>
 </body>
 </html>
