--- a/www/html/game_tp_ss/level_three_tp_ss.html
+++ b/www/html/game_tp_ss/level_three_tp_ss.html
@@ -26,12 +26,12 @@
         <h1 id="score">PUNTAJE:0000</h1>
     </div>
     <div class="image">
-        <img name="cube" src="../../img/game_tp_ss/gifTwo.gif" alt="">
+        <img name="cube" src="../../img/game_tp_ss/gifThree.gif" alt="">
     </div>
     <div class="sound" onclick="checkSound()">
         <img id="imgSound" src="../../img/game_tp_ss/audio.png" alt="settings">
     </div>
-    <audio id="audio" src="../../img/game_tp_ss/soundThree.mp3" autoplay="true" loop="true"></audio>
+    <audio id="audio" src="../../img/game_tp_ss/Eaters - Goodbye Pretty People.mp3" autoplay="true" loop="true"></audio>
     <script src="../../js/game_tp_ss/level_three_tp_ss.js"></script>
 </body>
 
