--- a/www/html/game_tp_ss/finish_tp_ss.html
+++ b/www/html/game_tp_ss/finish_tp_ss.html
@@ -34,7 +34,7 @@
     <div class="sound" onclick="checkSound()">
         <img id="imgSound" src="../../img/game_tp_ss/audio.png" alt="settings">
     </div>
-    <audio id="audio" src="../../img/game_tp_ss/soundThree.mp3" autoplay="true" loop="true"></audio>
+    <audio id="audio" src="../../img/game_tp_ss/Eaters - Goodbye Pretty People.mp3" autoplay="true" loop="true"></audio>
     <script src="../../js/game_tp_ss/finish_tp_ss.js"></script>
 </body>
 
