--- a/www/html/coordinador_jf_wr/lobbie.html
+++ b/www/html/coordinador_jf_wr/lobbie.html
@@ -35,7 +35,7 @@
         </div>
         <footer>
             <p>LOBBIE</p>
-            <div class="exit" onclick="deletePlayer()">
+            <div class="exit" onclick="deleteData()">
                 <img src="../../img/exit_background.png" alt="exit img" onclick="vibrate()">
             </div>
         </footer>
